--- a/servizi.html
+++ b/servizi.html
@@ -10,8 +10,7 @@
     </script>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta charset="utf-8">
-  <title>Image di Paola Braga - Chi Siamo</title>
+  <title>Image di Paola Braga - Trattamenti</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <!-- mobile settings -->
@@ -20,6 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
   <!-- CORE CSS -->
   <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
   <link href="./extra/owl.theme.css" rel="stylesheet" type="text/css">
@@ -27,9 +27,11 @@
   <link href="./extra/magnific-popup.css" rel="stylesheet" type="text/css">
   <!-- THEME CSS -->
   <link href="./extra/layout.css" rel="stylesheet" type="text/css">
-  <!-- Morenizr -->
-  <script type="text/javascript" src="./extra/modernizr.min.js"></script>
-  <style type="text/css"></style>
+  <style>
+    em{
+                font-size:14px;
+            }
+  </style>
   <header id="header">
     <nav class="navbar navbar-inverse" role="navigation">
       <!-- add "white" class for white nav bar -->
@@ -48,11 +50,11 @@
             <li>
               <a href="index.html">HOME</a>
             </li>
-            <li class="active">
+            <li>
               <a href="chisiamo.html">CHI SIAMO</a>
             </li>
-            <li>
-              <a href="servizi.html">SERVIZI</a>
+            <li class="active">
+              <a href="#">SERVIZI</a>
             </li>
             <li>
               <a href="trattamenti.html">TRATTAMENTI</a>
@@ -77,75 +79,98 @@
     <div class="alternate">
       <div class="container">
         <header>
-          <h1 class="uppercase text-center">CHI SIAMO</h1>
+          <h1 class="uppercase text-center ">SERVIZI</h1>
           <p class="lead text-center">Image è un centro di bellezza in cui l'attenzione al tuo tempo è fondamentale:
             è il percorso di bellezza che si adatta al tuo stile di vita e ai tuoi
-            ritmi, con trattamenti che privilegiano la qualità e l'intensità.</p><img src="imm-trattamenti.jpg" class="center-block img-responsive" style="width:100%">
+            ritmi, con trattamenti che privilegiano la qualità e l'intensità.</p>
         </header>
         <div class="divider">
           <!-- lines divider -->
         </div>
-        <div class="row">
-          <div class="col-md-offset-4 col-md-4">
-            <div class="thumbnail">
-              <!-- image -->
-              <img class="img-responsive" src="images/1.jpg" alt="team">
-              <!-- caption -->
-              <div class="caption text-center">
-                <h4>
-                  <!-- name + occupation -->Paola Braga
-                  <small class="block fsize13">Responsabile</small>
-                </h4>
-              </div>
-              <!-- /caption -->
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-offset-4 col-md-4">
-            <div class="thumbnail">
-              <!-- image -->
-              <img class="img-responsive" src="images/1.jpg" alt="team">
-              <!-- caption -->
-              <div class="caption text-center">
-                <h4>
-                  <!-- name + occupation -->Paola Braga
-                  <small class="block fsize13">Responsabile</small>
-                </h4>
-              </div>
-              <!-- /caption -->
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-offset-4 col-md-4">
-            <div class="thumbnail">
-              <!-- image -->
-              <img class="img-responsive" src="images/1.jpg" alt="team">
-              <!-- caption -->
-              <div class="caption text-center">
-                <h4>
-                  <!-- name + occupation -->Paola Braga
-                  <small class="block fsize13">Responsabile</small>
-                </h4>
-              </div>
-              <!-- /caption -->
-            </div>
-          </div>
-        </div>
       </div>
-      <div>
-        <div class="clearfix spacer">
-          <!-- 60px spacer -->
+      <!-- /GALLERY -->
+      <!-- -->
+      <div class="container">
+        <div class="row menu">
+          <!-- item -->
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
+              ®.</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <!-- /item -->
+          <!-- item -->
+          <!-- /item -->
+          <!-- item -->
+          <!-- /item -->
+          <!-- item -->
+          <!-- /item -->
+          <!-- item -->
+          <!-- /item -->
+          <!-- item -->
+          <!-- /item -->
+          <!-- /item -->
+          <!-- /item -->
         </div>
-        <div class="text-center">
-          <h1>
-            <!-- iPhones, Androids and other mobile devices will recognize the phone
-            number -->
-            <a class="phonelink" href="tel:+1800-555-1234">02- 9382322</a>
-            <small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
-          </h1>
-        </div>
+        <!-- /container -->
       </div>
     </div>
   </section>
@@ -153,11 +178,11 @@
   <!-- FOOTER -->
   <footer>
     <!-- SCROOL TO TOP -->
-    <a href="http://theme.stepofweb.com/Agretti/v1.0/MASSAGE/about.html#toTop" class="fa fa-arrow-up toTop"></a>
+    <a href="#toTop" class="fa fa-arrow-up toTop"></a>
     <div class="container">
       <div class="row">
         <div class="col-md-6 copyright">Image
-          <br>2015 © All Rights Reserved.</div>
+          <br>2015 All Rights Reserved.</div>
         <div class="col-md-6 text-right">
           <a href="" class="social fa fa-facebook"></a>
           <a href="" class="social fa fa-twitter"></a>
