--- a/trattamenti.html
+++ b/trattamenti.html
@@ -53,6 +53,9 @@
             <li>
               <a href="chisiamo.html">CHI SIAMO</a>
             </li>
+            <li>
+              <a href="servizi.html">SERVIZI</a>
+            </li>
             <li class="active">
               <a>TRATTAMENTI</a>
             </li>
@@ -120,8 +123,13 @@
       <div class="row menu">
         <!-- item -->
         <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
-          <h2 class="text-center">
-            TRATTAMENTI VISO A 360°<br>Dopo un'attenta analisi della cute del cliente siamo in grado di trovare la soluzione migliore per ogni tipo di inestetismi a ogni fascia di età.&nbsp;Con dei trattamenti mirati e la complicità della cliente a casa, i risultati saranno evidenti sin dai primi giorni. L'esperienza, le tecnologie da noi utilizzate e i prodotti con innumerevoli brevetti mondiali sono la nostra carta vincente.</h2>
+          <h2 class="text-center">TRATTAMENTI VISO A 360°
+            <br>Dopo un'attenta analisi della cute del cliente siamo in grado di trovare
+            la soluzione migliore per ogni tipo di inestetismi a ogni fascia di età.&nbsp;Con
+            dei trattamenti mirati e la complicità della cliente a casa, i risultati
+            saranno evidenti sin dai primi giorni. L'esperienza, le tecnologie da noi
+            utilizzate e i prodotti con innumerevoli brevetti mondiali sono la nostra
+            carta vincente.</h2>
           <!-- name -->
           <!-- short desc -->
         </div>
