--- a/solari.html
+++ b/solari.html
@@ -114,7 +114,7 @@
                 <a><img src="foto_news/solari2.jpg" class="img-fluid img-thumbnail"></a>
               </div>
               <div class="col-md-6">
-                <h3 class="subtitle">Trattamento macchie cutanee</h3>
+                <h3 class="subtitle">TRATTAMENTO MACCHIE CUTANEE</h3>
                 <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
                   sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
                   risultati di bellezza e protezione ottimali.</p>
