--- a/servizi.html
+++ b/servizi.html
@@ -95,64 +95,55 @@
           <!-- item -->
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Manicure</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Manicure con smalto semipermanente</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Pedicure estetico e curativo&nbsp;</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Pedicure con smalto semipermanente</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Depilazione normale o con pasta di zucchero</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Depilazione laser diodo</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Massaggi per il corpo</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Massaggi collo-schiena&nbsp;</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-              ®.</h2>
+              <i class="fa fa-dot-circle-o"></i>Trattamenti corpo mirati e personalizzati per il viso</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
