--- a/servizi.html
+++ b/servizi.html
@@ -10,7 +10,7 @@
     </script>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Image di Paola Braga - Trattamenti</title>
+  <title>Image di Paola Braga - Servizi</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <!-- mobile settings -->
@@ -144,7 +144,8 @@
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
               <i class="fa fa-dot-circle-o"></i>Trattamenti corpo mirati e personalizzati per il viso</h2>
-            <!-- name -->
+            <!-- name
+            -->
             <!-- short desc -->
           </div>
           <!-- /item -->
