--- a/chisiamo.html
+++ b/chisiamo.html
@@ -80,7 +80,7 @@
           <h1 class="uppercase text-center">CHI SIAMO</h1>
           <p class="lead text-center">Image è un centro di bellezza in cui l'attenzione al tuo tempo è fondamentale:
             è il percorso di bellezza che si adatta al tuo stile di vita e ai tuoi
-            ritmi, con trattamenti che privilegiano la qualità e l'intensità.</p><img src="imm-trattamenti.jpg" class="center-block img-responsive" style="width:100%">
+            ritmi, con trattamenti che privilegiano la qualità e l'intensità.</p><img src="foto_news/imm-Chi-siamo.jpeg" class="center-block img-responsive" style="width:100%">
         </header>
         <div class="divider">
           <!-- lines divider -->
