--- a/prodotti.html
+++ b/prodotti.html
@@ -104,8 +104,21 @@
             ritmi stagionali, dei cicli del giorno e della notte, e della sua evoluzione
             nel tempo.Tutti i prodotti Esthederm sono formulati con acqua cellulare
             che ottimizza l'ambiente energetico delle cellule.</p>
-          <img src="Prod-Esthed.jpeg" class="center-block img-responsive">
+          
         </header>
+        <div class="row gallery">
+          <div class="col-md-12">
+            <div class="section">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-12">
+                    <img src="prod-Omoe.jpeg" class="center-block img-responsive">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
