--- a/prodotti.html
+++ b/prodotti.html
@@ -112,7 +112,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-12">
-                    <img src="prod-Omoe.jpeg" class="center-block img-responsive">
+                    <img src="Prod-Esthed.jpeg" class="center-block img-responsive">
                   </div>
                 </div>
               </div>
