--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
     <title>Image di Paola Braga</title>
     <style>
@@ -54,8 +54,9 @@
     </style>
   </head><body>
     <header id="header">
-      <div class="navbar navbar-default navbar-fixed-bottom" style="    height: 100px;
-    padding: 15px 0;">
+      <!--    height: 100px;
+    padding: 15px 0;-->
+      <div class="navbar navbar-default navbar-fixed-bottom" style="padding: 15px 0;">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
