--- a/chisiamo.html
+++ b/chisiamo.html
@@ -2,6 +2,10 @@
     <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
       <style>
         .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
+
+        .mobileMenu{
+          z-index: 999;
+        }
       </style>
     </div>
     <script async="" src="./extra/analytics.js"></script>
