--- a/chisiamo.html
+++ b/chisiamo.html
@@ -158,7 +158,7 @@
   <!-- FOOTER -->
   <footer>
     <!-- SCROOL TO TOP -->
-    <a href="http://theme.stepofweb.com/Agretti/v1.0/MASSAGE/about.html#toTop" class="fa fa-arrow-up toTop"></a>
+    <a href="#toTop" class="fa fa-arrow-up toTop"></a>
     <div class="container">
       <div class="row">
         <div class="col-md-6 copyright">Image
