--- a/contact.html
+++ b/contact.html
@@ -91,15 +91,17 @@
   <!-- MIDDLE -->
   <section id="fullwidthmap"></section>
   <!-- content -->
-  <section id="middle" class="container" style="height: 400px;">
-    <header>
-      <h1 class="text-center">Inscriviti alla nostra
-        <strong>
-          <em>Newsletter!</em>
-        </strong>
-      </h1>
-      <p class="lead2 text-center">Riceverai ogni mese aggiornamenti sulle novità del nostro negozio.</p>
-    </header>
+      <div class="container" style="padding-top:10px;">
+        <header>
+          <h1 class="uppercase text-center ">Inscriviti alla nostra</h1>
+          <p class="lead text-center">Riceverai ogni mese aggiornamenti sulle novità del nostro negozio.</p>
+        </header>
+        <div class="divider">
+          <!-- lines divider -->
+        </div>
+      </div>
+
+
     <div class="row">
       <div class="col-md-12">
         <script type="text/javascript">
@@ -129,7 +131,7 @@
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Scrivi la tua mail">
               <span class="input-group-btn">
-                <a class="btn btn-success" type="submit">Invia!</a>
+                <a class="btn btn-success btn-block" type="submit">Invia!</a>
               </span>
             </div>
           </div>
@@ -206,7 +208,6 @@
         <!-- /INFO COLUMN -->
       </div>
     </div>
-  </section>
   <!-- /MIDDLE -->
   <!-- FOOTER -->
   <footer>
