--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
   <!-- content -->
       <div class="container" style="padding-top:10px;">
         <header>
-          <h1 class="uppercase text-center ">Inscriviti alla nostra</h1>
+          <h1 class="uppercase text-center ">Iscriviti alla nostra newsletter</h1>
           <p class="lead text-center">Riceverai ogni mese aggiornamenti sulle novità del nostro negozio.</p>
         </header>
         <div class="divider">
